--- a/style.css
+++ b/style.css
@@ -7,4 +7,5 @@ body {color: #262626;}
     margin: auto;
     height: 100vh;
 }
-.welcome p {font-size: 1.2rem; font-weight: 300;width: 70%; text-align: center;}
+.welcome {display: flex; justify-content: center; padding: 45px 0;}
+.welcome p {font-size: 1.2rem; font-weight: 300;width: 70%; text-align: center;
