--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-body {color: #262626;}
+body {color: #262626; background: url("background.png") no-repeat center center; background-size: cover}
 a {color: #262626;}
+p {margin: 0;}
 .container {
     display: flex;
     flex-direction: column;
@@ -11,4 +12,5 @@ a {color: #262626;}
 .welcome {display: flex; justify-content: center; padding: 45px 0;}
 .welcome p {font-size: 1.2rem; font-weight: 300;width: 70%; text-align: center;}
 .contact span {font-weight: 600;}
-.contact::after {height: 5px; width: 5px; color: blue;}
+.seperator {border: 1px solid #20206f; width: 9%; margin: 30px 0;}
+.construction h1 {color: #20206f; font-size: 2.2rem; font-weight: 700;}
