--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {color: #262626; background: url("background.png") no-repeat center center; background-size: cover}
+body {color: #262626;}
+main { background: url("background.png") no-repeat center center; background-size: cover;}
 a {color: #262626;}
 p {margin: 0;}
 .container {
@@ -14,3 +15,10 @@ p {margin: 0;}
 .contact span {font-weight: 600;}
 .seperator {border: 1px solid #20206f; width: 9%; margin: 30px 0;}
 .construction h1 {color: #20206f; font-size: 2.2rem; font-weight: 700;}
+
+@media screen and (max-width: 576px) {
+    .welcome {padding: 30px 0;}
+    .welcome p {width: 100%; text-align: justify;}
+    .seperator {width: 50%;}
+    .construction h1 {text-align: center; font-size: 2rem;}
+}
