--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {color: #262626;}
+body {color: #262626; font-family: "Montserrat", sans-serif;}
 main { background: url("background.png") no-repeat center center; background-size: cover;}
 a {color: #262626;}
 p {margin: 0;}
@@ -14,7 +14,7 @@ p {margin: 0;}
 .welcome p {font-size: 1.2rem; font-weight: 300;width: 70%; text-align: center;}
 .contact span {font-weight: 600;}
 .seperator {border: 1px solid #20206f; width: 9%; margin: 30px 0;}
-.construction h1 {color: #20206f; font-size: 2.2rem; font-weight: 700;}
+.construction h1 {color: #20206f; font-size: 2.2rem; font-weight: 900;}
 
 @media screen and (max-width: 576px) {
     .welcome {padding: 30px 0;}
